--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="collection">
                 <div class="collection-banner">
                     <img src="images/airpod-3.png" alt="">
@@ -282,10 +281,45 @@
     </section>
     <!-- popular collection section end  -->
 
+    <!-- extra section  -->
+    <section class="container">
+        <div class="newsletter">
+            <h1>Sign up for Latest news</h1>
+            <div class="newsletter-box">
+                <form action="#">
+                    <input class="email-part" placeholder="Enter your email  here..." name="email" type="text">
+                    <button class="submit-btn main-btn" type="submit">Join Us<span><i
+                                class="fas fa-arrow-right"></i></span>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </section>
 
 </main>
 
 <!-- === Main Section End ==  -->
+
+<!-- footer -->
+<footer>
+    <section class="foot">
+        <h2>Influencer products</h2>
+        <h4>Copyright © 2022 influencer products
+            <br>
+            All rights reserved
+        </h4>
+        <div class="foot-icon">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-facebook-messenger"></i>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-instagram"></i>
+        </div>
+    </section>
+</footer>
+
+
+
+
 
 <body>
 
