--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <!-- header start  -->
     <header class="header">
         <div class="header-content">
-            <div class="influ-prdt">
+            <div class="Influencer-product">
+                <i class="fas fa-bars"></i>
                 <p>Influencer products</p>
             </div>
             <nav>
@@ -40,6 +41,7 @@
     <main>
         <!-- Influencer section  -->
         <section class="container">
+
             <div class="influencer">
                 <div class="influencer-about">
                     <h1>Start your Journey as <br> Influencer</h1>
@@ -51,11 +53,15 @@
                         <a target="_blank" href="">Preebook now </a>
                         <i class="fas fa-arrow-right"></i>
                     </div>
-
                 </div>
+
                 <div class="influencer-img">
-                    <img src="images/Circle design.svg" alt="">
-                    <img src="images/main-camera.png" alt="">
+                    <div class="main-background">
+                        <img src="images/Circle design.svg" alt="">
+                    </div>
+                    <div class="main-camera">
+                        <img src="images/main-camera.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -288,10 +294,10 @@
         <!-- extra section  -->
         <section class="container">
             <div class="newsletter">
-                <h1>Sign up for Latest news</h1>
+                <h1>Sign Up for Latest News</h1>
                 <div class="newsletter-box">
                     <form action="#">
-                        <input class="email-part" placeholder="Enter your email  here..." name="email" type="text">
+                        <input class="email-part" placeholder="Enter your Email... " name="email" type="text">
                         <button class="submit-btn main-btn" type="submit">Join Us<span><i
                                     class="fas fa-arrow-right"></i></span>
                         </button>
@@ -310,10 +316,10 @@
                 All rights reserved
             </h4>
             <div class="foot-icon">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-facebook-messenger"></i>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-instagram"></i>
+                <a target="_blank" href=""><i class="fab fa-facebook"></i></a>
+                <a target="_blank" href=""><i class="fab fa-facebook-messenger"></i></a>
+                <a target="_blank" href=""><i class="fab fa-twitter-square"></i></a>
+                <a target="_blank" href=""><i class="fab fa-instagram"></i></a>
             </div>
         </section>
     </footer>
